# copert-cli

./: .gitignore  CLAUDE.md  README.md  TODO.md  main.py  pyproject.toml
copert/: __init__.py
copert/agents/: __init__.py  graph.py
copert/cli/: __init__.py  entrypoint.py  main.py  session.py
copert/config/: __init__.py  schemas.py  settings.py
copert/llm/: __init__.py  client.py  prompts.py
copert/state/: __init__.py  conversation.py
copert/tools/: __init__.py  base.py
copert/tools/execution/: __init__.py  bash.py
copert/tools/file_ops/: __init__.py  edit.py  ls.py  multiedit.py  read.py  write.py
copert/tools/project/: __init__.py  copert_md.py  init.py
copert/tools/search/: __init__.py  glob.py  grep.py
copert/tools/task/: __init__.py  delegate.py
copert/tools/task_management/: __init__.py  todowrite.py
copert/tools/web/: __init__.py  webfetch.py  websearch.py
copert/utils/: __init__.py  approval.py  memory.py
tests/: chatbot_with_weather.py  langgraph_chatbot_cli.py  prime.py  simple_langchain_chatbot.py  test_chatbot_with_weather.py  weather_tool.py
