[project]
name = "copert-cli"
version = "0.1.0"
description = "AI-powered coding assistant CLI built with LangGraph and OpenAI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.2",
    "exa-py>=1.16.1",
    "gitpython>=3.1.45",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.79",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.19.2",
]

[project.scripts]
copert = "copert.cli.entrypoint:cli_main"

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.0",
]
